# OpsCplex

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: basic.yml
data/: test_instance.json  test_targets.json
data/input/: SA_n400_051_a25_151.txt  SA_n400_051_a50_152.txt  SA_n400_051_a75_153.txt  SA_n400_052_a25_154.txt  SA_n400_052_a50_155.txt  SA_n400_052_a75_156.txt  SA_n400_053_a25_157.txt  SA_n400_053_a50_158.txt  SA_n400_053_a75_159.txt  SA_n400_054_a25_160.txt  SA_n400_054_a50_161.txt  SA_n400_054_a75_162.txt  SA_n400_055_a25_163.txt  SA_n400_055_a50_164.txt  SA_n400_055_a75_165.txt  SA_n425_056_a25_166.txt  SA_n425_056_a50_167.txt  SA_n425_056_a75_168.txt  SA_n425_057_a25_169.txt  SA_n425_057_a50_170.txt  SA_n425_057_a75_171.txt  SA_n425_058_a25_172.txt  SA_n425_058_a50_173.txt  SA_n425_058_a75_174.txt  SA_n425_059_a25_175.txt  SA_n425_059_a50_176.txt  SA_n425_059_a75_177.txt  SA_n425_060_a25_178.txt  SA_n425_060_a50_179.txt  SA_n425_060_a75_180.txt  SA_n450_061_a25_181.txt  SA_n450_061_a50_182.txt  SA_n450_061_a75_183.txt  SA_n450_062_a25_184.txt  SA_n450_062_a50_185.txt  SA_n450_062_a75_186.txt  SA_n450_063_a25_187.txt  SA_n450_063_a50_188.txt  SA_n450_063_a75_189.txt  SA_n450_064_a25_190.txt  (+35 more)
data/output/A/: A_n040_001_a25_001.txt  A_n040_001_a50_002.txt  A_n040_001_a75_003.txt  A_n040_002_a25_004.txt  A_n040_002_a50_005.txt  A_n040_002_a75_006.txt  A_n040_003_a25_007.txt  A_n040_003_a50_008.txt  A_n040_003_a75_009.txt  A_n040_004_a25_010.txt  A_n040_004_a50_011.txt  A_n040_004_a75_012.txt  A_n040_005_a25_013.txt  A_n040_005_a50_014.txt  A_n040_005_a75_015.txt  A_n050_006_a25_016.txt  A_n050_006_a50_017.txt  A_n050_006_a75_018.txt  A_n050_007_a25_019.txt  A_n050_007_a50_020.txt  A_n050_007_a75_021.txt  A_n050_008_a25_022.txt  A_n050_008_a50_023.txt  A_n050_008_a75_024.txt  A_n050_009_a25_025.txt  A_n050_009_a50_026.txt  A_n050_009_a75_027.txt  A_n050_010_a25_028.txt  A_n050_010_a50_029.txt  A_n050_010_a75_030.txt  A_n060_011_a25_031.txt  A_n060_011_a50_032.txt  A_n060_011_a75_033.txt  A_n060_012_a25_034.txt  A_n060_012_a50_035.txt  A_n060_012_a75_036.txt  A_n060_013_a25_037.txt  A_n060_013_a50_038.txt  A_n060_013_a75_039.txt  A_n060_014_a25_040.txt  (+20 more)
data/output/B/: B_n040_001_a25_001.txt  B_n040_001_a50_002.txt  B_n040_001_a75_003.txt  B_n040_002_a25_004.txt  B_n040_002_a50_005.txt  B_n040_002_a75_006.txt  B_n040_003_a25_007.txt  B_n040_003_a50_008.txt  B_n040_003_a75_009.txt  B_n040_004_a25_010.txt  B_n040_004_a50_011.txt  B_n040_004_a75_012.txt  B_n040_005_a25_013.txt  B_n040_005_a50_014.txt  B_n040_005_a75_015.txt  B_n050_006_a25_016.txt  B_n050_006_a50_017.txt  B_n050_006_a75_018.txt  B_n050_007_a25_019.txt  B_n050_007_a50_020.txt  B_n050_007_a75_021.txt  B_n050_008_a25_022.txt  B_n050_008_a50_023.txt  B_n050_008_a75_024.txt  B_n050_009_a25_025.txt  B_n050_009_a50_026.txt  B_n050_009_a75_027.txt  B_n050_010_a25_028.txt  B_n050_010_a50_029.txt  B_n050_010_a75_030.txt  B_n060_011_a25_031.txt  B_n060_011_a50_032.txt  B_n060_011_a75_033.txt  B_n060_012_a25_034.txt  B_n060_012_a50_035.txt  B_n060_012_a75_036.txt  B_n060_013_a25_037.txt  B_n060_013_a50_038.txt  B_n060_013_a75_039.txt  B_n060_014_a25_040.txt  (+20 more)
data/output/LA/: LA_n040_001_a25_001.txt  LA_n040_001_a50_002.txt  LA_n040_001_a75_003.txt  LA_n040_002_a25_004.txt  LA_n040_002_a50_005.txt  LA_n040_002_a75_006.txt  LA_n040_003_a25_007.txt  LA_n040_003_a50_008.txt  LA_n040_003_a75_009.txt  LA_n040_004_a25_010.txt  LA_n040_004_a50_011.txt  LA_n040_004_a75_012.txt  LA_n040_005_a25_013.txt  LA_n040_005_a50_014.txt  LA_n040_005_a75_015.txt  LA_n050_006_a25_016.txt  LA_n050_006_a50_017.txt  LA_n050_006_a75_018.txt  LA_n050_007_a25_019.txt  LA_n050_007_a50_020.txt  LA_n050_007_a75_021.txt  LA_n050_008_a25_022.txt  LA_n050_008_a50_023.txt  LA_n050_008_a75_024.txt  LA_n050_009_a25_025.txt  LA_n050_009_a50_026.txt  LA_n050_009_a75_027.txt  LA_n050_010_a25_028.txt  LA_n050_010_a50_029.txt  LA_n050_010_a75_030.txt  LA_n060_011_a25_031.txt  LA_n060_011_a50_032.txt  LA_n060_011_a75_033.txt  LA_n060_012_a25_034.txt  LA_n060_012_a50_035.txt  LA_n060_012_a75_036.txt  LA_n060_013_a25_037.txt  LA_n060_013_a50_038.txt  LA_n060_013_a75_039.txt  LA_n060_014_a25_040.txt  (+20 more)
data/output/LB/: LB_n040_001_a25_001.txt  LB_n040_001_a50_002.txt  LB_n040_001_a75_003.txt  LB_n040_002_a25_004.txt  LB_n040_002_a50_005.txt  LB_n040_002_a75_006.txt  LB_n040_003_a25_007.txt  LB_n040_003_a50_008.txt  LB_n040_003_a75_009.txt  LB_n040_004_a25_010.txt  LB_n040_004_a50_011.txt  LB_n040_004_a75_012.txt  LB_n040_005_a25_013.txt  LB_n040_005_a50_014.txt  LB_n040_005_a75_015.txt  LB_n050_006_a25_016.txt  LB_n050_006_a50_017.txt  LB_n050_006_a75_018.txt  LB_n050_007_a25_019.txt  (+41 more)
lib/: CMakeLists.txt
lib/nlohmann/: CMakeLists.txt
src/: CMakeLists.txt
src/error/: CMakeLists.txt  ops_error.hpp
src/input/: CMakeLists.txt
src/input/include/: OPS_input_t.hpp  OPS_instance_t.hpp  arc.fwd.hpp  arc.hpp  graph.hpp  node.fwd.hpp  node.hpp  ops_input.hpp  ops_instance.hpp  point_t.hpp  target_set_t.hpp  target_t.hpp
src/input/src/: OPS_input_t.cpp  OPS_instance_t.cpp  arc.cpp  graph.cpp  node.cpp  ops_input.cpp  ops_instance.cpp
src/json/: CMakeLists.txt
src/main/: CMakeLists.txt
src/main/include/: main_functions.hpp  solvers.hpp
src/main/src/: main.cpp  main_functions.cpp  solvers.cpp
src/models/: CMakeLists.txt
src/models/include/: OPS_bc1.hpp  OPS_solver_t.hpp  ops_bc.hpp  ops_cplex_solver.hpp  ops_solver.hpp
src/models/src/: OPS_bc1.cpp  OPS_bc1.cpp:Zone.Identifier  ops_bc.cpp  ops_cplex_solver.cpp  ops_solver.cpp
src/output/: CMakeLists.txt
src/output/include/: OPS_output_t.hpp  OPS_tikz.hpp  gantt_TIKZ_t.hpp  ops_output.hpp  point_t.hpp  target_set_t.hpp  target_t.hpp
src/output/src/: OPS_output_t.cpp  ops_output.cpp
src/util/: CMakeLists.txt
src/util/include/: bitset.hpp  functions.hpp  json_interface.hpp  local_type_traits.hpp  matrix.hpp  small_bitset_t.hpp  stats.hpp  timer.hpp  timer_t.hpp
src/util/src/: functions.cpp  timer_t.cpp
tests/: CMakeLists.txt  main.test.cpp
(+480 files in other folders)
